# Glass

./: .gitignore  AGENT_COORDINATION_DESIGN.md  AGENT_MCP_FEATURES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  ORCHESTRATOR.md  PERFORMANCE.md  PRD-self-improvement.md  PRD.md  README.md  SOI_AND_AGENT_MODE.md  THIRD-PARTY-LICENSES  about.toml  auto-gsd.sh  build.rs  config.example.toml  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.3-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md  v2.1-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v2.1-REQUIREMENTS.md  v2.2-MILESTONE-AUDIT.md  v2.2-REQUIREMENTS.md  v2.2-ROADMAP.md  v2.3-MILESTONE-AUDIT.md  v2.3-REQUIREMENTS.md  v2.4-MILESTONE-AUDIT.md  v2.4-REQUIREMENTS.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md
.planning/phases/01-scaffold/: 01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-terminal-core/: 02-02-PLAN.md  02-03-SUMMARY.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-shell-integration-and-block-ui/: 03-01-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benches/: perf_benchmarks.rs
crates/glass_agent/: Cargo.toml
crates/glass_agent/src/: lib.rs  session_db.rs  types.rs  worktree_db.rs  worktree_manager.rs
crates/glass_agent_backend/: Cargo.toml
crates/glass_agent_backend/src/: anthropic.rs  claude_cli.rs  ipc_tools.rs  lib.rs  model_cache.rs  ollama.rs  openai.rs
crates/glass_agent_backend/src/codex_cli/: auth.rs  mod.rs  parse.rs
crates/glass_agent_backend/tests/: codex_cli_e2e.rs
crates/glass_agent_backend/tests/fixtures/codex/: init.jsonl  text_delta.jsonl  tool_call.jsonl  tool_result.jsonl  turn_end.jsonl
crates/glass_coordination/: Cargo.toml
crates/glass_coordination/src/: db.rs  event_log.rs  lib.rs  pid.rs  types.rs
crates/glass_core/: Cargo.toml
crates/glass_core/src/: activity_stream.rs  agent_runtime.rs  config.rs  config_watcher.rs  coordination_poller.rs  event.rs  ipc.rs  lib.rs  onboarding.rs  provider_detect.rs  state.rs  updater.rs
crates/glass_errors/: Cargo.toml
crates/glass_feedback/: Cargo.toml
crates/glass_feedback/src/: ablation.rs  analyzer.rs  attribution.rs  coverage.rs  defaults.rs  io.rs  lib.rs  lifecycle.rs  llm.rs  quality.rs  regression.rs  rules.rs  types.rs
crates/glass_feedback/tests/: integration.rs
crates/glass_history/: Cargo.toml
crates/glass_history/src/: compress.rs  config.rs  db.rs  lib.rs  output.rs  query.rs  retention.rs  search.rs  soi.rs
crates/glass_mcp/: Cargo.toml
crates/glass_mcp/src/: context.rs  ipc_client.rs  lib.rs  tools.rs
crates/glass_mux/: Cargo.toml
crates/glass_mux/src/: layout.rs  lib.rs  platform.rs  search_overlay.rs  session.rs  session_mux.rs  split_tree.rs  tab.rs  types.rs
crates/glass_pipes/: Cargo.toml
crates/glass_renderer/: Cargo.toml
crates/glass_renderer/src/: activity_overlay.rs  block_renderer.rs  config_error_overlay.rs  conflict_overlay.rs  frame.rs  glyph_cache.rs  grid_renderer.rs  lib.rs  onboarding_toast_renderer.rs  proposal_overlay_renderer.rs  proposal_toast_renderer.rs  rect_renderer.rs  scrollbar.rs  search_overlay_renderer.rs  settings_overlay.rs  status_bar.rs  surface.rs  tab_bar.rs  welcome_overlay.rs
crates/glass_scripting/: Cargo.toml
crates/glass_scripting/src/: actions.rs  context.rs  engine.rs  hooks.rs  lib.rs  lifecycle.rs  loader.rs  mcp.rs  profile.rs  sandbox.rs  types.rs
crates/glass_snapshot/: Cargo.toml
crates/glass_snapshot/src/: blob_store.rs  command_parser.rs  db.rs  ignore_rules.rs  lib.rs  pruner.rs  types.rs  undo.rs  watcher.rs
crates/glass_soi/: Cargo.toml
crates/glass_soi/src/: ansi.rs  cargo_build.rs  cargo_misc.rs  cargo_test.rs  classifier.rs  cpp_compiler.rs  csv_parser.rs  docker.rs  generic_compiler.rs  git.rs  go_build.rs  go_test.rs  jest.rs  json_lines.rs  json_object.rs  kubectl.rs  lib.rs  npm.rs  pip.rs  pytest.rs  tap.rs  terraform.rs  tsc.rs  types.rs
crates/glass_terminal/: Cargo.toml
crates/glass_terminal/src/: block_manager.rs  event_proxy.rs  grid_snapshot.rs  input.rs  lib.rs  osc_scanner.rs  output_capture.rs  pty.rs  silence.rs  status.rs  tests.rs
docs/: RELEASE-CHECKLIST.md  book.toml
docs/archive/: PRD-full-audit.md  PRD-robustness-audit.md  PRD-settings-audit.md  PRD-soi-parsers.md
docs/src/: SUMMARY.md  agent-coordination.md  configuration.md  getting-started.md  introduction.md  mcp-server.md  troubleshooting.md
examples/scripts/: README.md  auto_git_status.rhai  auto_git_status.toml  block_rm_rf.rhai  block_rm_rf.toml  notify_long_command.rhai  notify_long_command.toml
packaging/homebrew/: glass.rb
packaging/linux/: glass.desktop
packaging/macos/: Info.plist  build-dmg.sh
packaging/scoop/: glass.json
packaging/winget/: Glass.Terminal.installer.yaml  Glass.Terminal.locale.en-US.yaml  Glass.Terminal.yaml
shell-integration/: glass.bash  glass.fish  glass.ps1  glass.zsh
src/: agent_instructions.rs  analyze.rs  checkpoint_synth.rs  doctor.rs  ephemeral_agent.rs  history.rs  main.rs  mcp_register.rs  orchestrator.rs  orchestrator_context.rs  orchestrator_events.rs  script_bridge.rs  search_overlay.rs  tests.rs  usage_tracker.rs
tests/: mcp_integration.rs
tools/glass-analyze/: CLAUDE.md
tools/run-analyzer/: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.node.json
wix/: License.rtf  main.wxs
(+579 files in other folders)
