[workspace]
resolver = "2"
members = ["crates/*", "."]

[workspace.dependencies]
# Rendering
wgpu          = "28.0.0"
winit         = "0.30.13"
bytemuck      = { version = "1.25.0", features = ["derive"] }
pollster      = "0.4.0"

# Terminal emulation — EXACT version pin, no ^ or ~
alacritty_terminal = "=0.25.1"
tokio         = { version = "1.50.0", features = ["full"] }

# Config
serde         = { version = "1.0.228", features = ["derive"] }
toml          = "1.0.4"

# Utilities
anyhow        = "1.0.102"
tracing       = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Stub crate deps (future phases)
rusqlite      = { version = "0.38.0", features = ["bundled"] }

# Windows API (UTF-8 console code page)
windows-sys   = { version = "0.59", features = ["Win32_System_Console"] }

[package]
name = "glass"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "glass"
path = "src/main.rs"

[dependencies]
glass_core     = { path = "crates/glass_core" }
glass_terminal = { path = "crates/glass_terminal" }
glass_renderer = { path = "crates/glass_renderer" }
winit.workspace = true
pollster.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
windows-sys.workspace = true
alacritty_terminal.workspace = true
