[workspace]
resolver = "2"
members = ["crates/*", "."]

[workspace.dependencies]
# Rendering
wgpu          = "28.0.0"
winit         = "0.30.13"
bytemuck      = { version = "1.25.0", features = ["derive"] }
pollster      = "0.4.0"

# Terminal emulation — EXACT version pin, no ^ or ~
alacritty_terminal = "=0.25.1"
tokio         = { version = "1.50.0", features = ["full"] }

# Config
serde         = { version = "1.0.228", features = ["derive"] }
toml          = "1.0.4"
dirs          = "6"

# Utilities
anyhow        = "1.0.102"
tracing       = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Text rendering
glyphon       = "0.10.0"

# Clipboard
arboard       = "3"

# URL parsing (OSC 7 file:// paths)
url           = "2"

# Performance measurement
memory-stats  = "1.2"

# CLI
clap          = { version = "4.5", features = ["derive"] }

# Time/date
chrono        = "0.4"

# Content-addressed hashing
blake3        = "1.8.3"

# Shell tokenization
shlex         = "1.3.0"

# Database (future phases)
rusqlite      = { version = "0.38.0", features = ["bundled"] }

# Windows API (UTF-8 console code page, Job Objects for orphan prevention)
windows-sys   = { version = "0.59", features = ["Win32_System_Console", "Win32_System_JobObjects", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

# Unix process control (prctl for orphan prevention)
libc          = "0.2"

# HTTP client (usage API polling)
ureq          = "3"

# Agent worktree isolation
git2          = "0.20"
diffy         = "0.4"
uuid          = { version = "1", features = ["v4"] }
serde_json    = "1.0"

# Scripting engine
rhai          = "1"
schemars      = "1"

# Mutex without poisoning
parking_lot   = "0.12"
# Secret zeroing
zeroize       = "1"

[package]
name = "glass"
version = "2.5.0"
edition = "2021"
authors = ["Glass Contributors"]
license = "MIT"
description = "GPU-accelerated terminal emulator with command structure awareness"

[features]
perf = ["glass_terminal/perf", "glass_renderer/perf", "dep:tracing-chrome"]

[[bin]]
name = "glass"
path = "src/main.rs"

[[bench]]
name = "perf_benchmarks"
harness = false

[dependencies]
glass_core     = { path = "crates/glass_core" }
glass_terminal = { path = "crates/glass_terminal" }
glass_renderer = { path = "crates/glass_renderer" }
winit.workspace = true
pollster.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
alacritty_terminal.workspace = true
arboard.workspace = true
memory-stats.workspace = true
clap = { workspace = true, features = ["derive"] }
glass_history = { version = "0.1.0", path = "crates/glass_history" }
glass_mcp = { path = "crates/glass_mcp" }
glass_snapshot = { path = "crates/glass_snapshot" }
tokio = { workspace = true }
chrono.workspace = true
dirs.workspace = true
glass_pipes = { path = "crates/glass_pipes" }
glass_mux = { path = "crates/glass_mux" }
glass_coordination = { path = "crates/glass_coordination" }
glass_soi = { path = "crates/glass_soi" }
glass_agent = { path = "crates/glass_agent" }
glass_feedback = { path = "crates/glass_feedback" }
glass_scripting = { path = "crates/glass_scripting" }
image = { version = "0.25", default-features = false, features = ["png"] }
tracing-chrome = { version = "0.7", optional = true }
serde_json = { workspace = true }
uuid = { workspace = true }
regex = "1"
ureq = { workspace = true }
notify = "8.0"
tempfile = "3"
parking_lot = "0.12"
zeroize = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[package.metadata.deb]
maintainer = "Glass Contributors"
copyright = "2026, Glass Contributors"
license-file = ["LICENSE", "0"]
depends = "$auto"
extended-description = """\
Glass is a GPU-accelerated terminal emulator that understands command structure. \
It renders each command's output as a visually distinct block with exit code, \
duration, and status information."""
section = "x11"
priority = "optional"
assets = [
    ["target/release/glass", "usr/bin/", "755"],
    ["packaging/linux/glass.desktop", "usr/share/applications/", "644"],
]
