[package]
name = "glass_coordination"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rusqlite = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }
dunce = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
