[package]
name = "glass_core"
version = "0.1.0"
edition = "2021"

[dependencies]
winit.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
notify = "8.0"
ureq = "3"
semver = "1"
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
tempfile = "3"
