[package]
name = "glass_feedback"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
glass_core = { path = "../glass_core" }
regex = "1"

[dev-dependencies]
tempfile = "3"
