[package]
name = "glass_history"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
strip-ansi-escapes = "0.2"
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
toml = { workspace = true }
