[package]
name = "glass_history"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
strip-ansi-escapes = "0.2"
chrono = { workspace = true }
glass_soi = { path = "../glass_soi" }

[dev-dependencies]
tempfile = "3"
toml = { workspace = true }
