[package]
name = "glass_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
schemars = "1.0"
glass_history = { path = "../glass_history" }
glass_snapshot = { path = "../glass_snapshot" }
glass_coordination = { path = "../glass_coordination" }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
regex = "1"
similar = "2"
glass_errors = { path = "../glass_errors" }

[dev-dependencies]
tempfile = "3"
glass_soi = { path = "../glass_soi" }
