[package]
name = "glass_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
glass_core = { path = "../glass_core" }
glass_terminal = { path = "../glass_terminal" }
alacritty_terminal.workspace = true
glyphon.workspace = true
wgpu.workspace = true
winit.workspace = true
bytemuck.workspace = true
tracing.workspace = true
