[package]
name = "glass_scripting"
version = "0.1.0"
edition = "2021"

[dependencies]
glass_core = { path = "../glass_core" }
rhai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
