[package]
name = "glass_snapshot"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
blake3 = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
shlex = { workspace = true }
notify = "8.2"
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
