[package]
name = "glass_terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
glass_core = { path = "../glass_core" }
alacritty_terminal.workspace = true
arboard.workspace = true
tokio.workspace = true
winit.workspace = true
tracing.workspace = true
url.workspace = true
polling = "3"
vte = "0.15"
glass_pipes = { path = "../glass_pipes" }
