[package]
name = "glass_terminal"
version = "0.1.0"
edition = "2021"

[features]
perf = []

[dependencies]
glass_core = { path = "../glass_core" }
alacritty_terminal.workspace = true
arboard.workspace = true
tokio.workspace = true
winit.workspace = true
tracing.workspace = true
url.workspace = true
polling = "3"
regex = "1"
vte = "0.15"
glass_pipes = { path = "../glass_pipes" }
